# RK3588-GPIO

./: Cargo.toml
src/: lib.rs  rk3588_gpio.rs
tests/: test.rs
